tests/paczka1/small_fuzzy/24178025.err
Error in line 3: A5 A5 19,3
Error in line 8: A5 A5 19,3
Error in line 15: vmIEVyOo A381 93,6
